# familycamp

./: .gitignore  DEPLOY.md  README.md  SITE_REBUILD_PLAN.md  aye.html  docker-compose.yml  pyproject.toml
admin/: index.html
autocamping/: .env.example  docker-compose.dev.yml  docker-compose.yml
autocamping/backend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
autocamping/backend/src/: app.module.ts  main.ts
autocamping/backend/test/: app.e2e-spec.ts  jest-e2e.json
autocamping/frontend-admin/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
autocamping/frontend-admin/src/: App.css  App.tsx
autocamping/frontend-public/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
autocamping/nginx/: Dockerfile  nginx.conf  nginx.dev.conf
backend/: README.md  requirements.txt
backend/app/: config.py  crm.py  database.py  db.py  main.py  models.py  schemas.py  security.py  services.py
camping-main/: .dockerignore  .env.example  main.py  requirements.txt
camping-main/app/: models.py  schemas.py
camping-main/app/api/: router.py
camping-main/app/core/: config.py  errors.py
camping-main/app/services/: crm.py  request_guard.py
camping-main/backend/BD/: BD_alchemy.py  bd_connect.py
camping-main/migrations/: 001_stage_b_postgres.md
camping-main/tests/: conftest.py  test_booking_api.py
deploy/nginx/: default.conf
frontend/: admin.html  index.html
frontend/assets/css/: admin.css  styles.css
frontend/assets/js/: admin.js  app.js
(+127 files in other folders)
